Fixed dark mode tables

--- a/ghost/admin/app/styles/app-dark.css
+++ b/ghost/admin/app/styles/app-dark.css
@@ -700,31 +700,10 @@ input:focus,
     border-color: var(--lightgrey);
 }
 
-.gh-list-scrolling thead th:first-child::before,
-.gh-list-scrolling tbody .gh-list-data:first-child::before {
-    background: var(--lightgrey);
-}
-
 .gh-posts-list-item:hover,
 .ember-power-select-group .ember-power-select-option[aria-current=true],
 .settings-tag .tag-edit-button.active,
 .gh-portal-site-frame-cover {
-    background: var(--whitegrey);
-}
-
-.gh-list-row:not(.loading):hover .gh-list-data:first-of-type {
-    background: linear-gradient(315deg, var(--whitegrey) 60%, var(--white) 100%);
-}
-
-.gh-list-row:not(.loading):hover .gh-list-data:not(:first-of-type) {
-    background: var(--whitegrey);
-}
-
-.gh-list-scrolling tbody tr:hover > a:first-of-type {
-    background: linear-gradient(315deg, var(--whitegrey) 60%, var(--white) 100%);
-}
-
-.gh-list-scrolling tbody tr:hover > a:not(:first-of-type) {
     background: var(--whitegrey);
 }
 
@@ -867,12 +846,6 @@ input:focus,
 /* Dark style Lists */
 .gh-list {
     background: var(--dark-main-bg-color) !important;
-}
-
-.gh-list-header,
-.gh-list-row:not(.header):hover .gh-list-cell,
-.gh-list-row:not(.header):hover .gh-list-data {
-    background: var(--dark-main-bg-color);
 }
 
 .gh-list-header {
